force-app/main/default/objects/ASL__AssureSign_Settings__c/ASL__AssureSign_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>AssureSign Settings</label>
</CustomObject>