force-app/main/default/objects/ASL__AssureSign_Settings__c/fields/ASL__Automatically_Download_Documents__c.field-meta.xml
<CustomField>
    <fullName>ASL__Automatically_Download_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatically Download Documents</label>
    <type>Checkbox</type>
</CustomField>