force-app/main/default/objects/ASL__AssureSign_Settings__c/fields/ASL__Document_Parsing__c.field-meta.xml
<CustomField>
    <fullName>ASL__Document_Parsing__c</fullName>
    <label>Document Parsing</label>
    <length>50</length>
    <type>Text</type>
</CustomField>