force-app/main/default/objects/ASL__AssureSign_Settings__c/fields/ASL__Download_History__c.field-meta.xml
<CustomField>
    <fullName>ASL__Download_History__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Download History</label>
    <type>Checkbox</type>
</CustomField>