force-app/main/default/objects/ASL__AssureSign_Settings__c/fields/ASL__Envelope_Expiration__c.field-meta.xml
<CustomField>
    <fullName>ASL__Envelope_Expiration__c</fullName>
    <label>Envelope Expiration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>