force-app/main/default/objects/ASL__AssureSign_Settings__c/fields/ASL__Envelope_Expiration_Days__c.field-meta.xml
<CustomField>
    <fullName>ASL__Envelope_Expiration_Days__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Envelope Expiration Days</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>