force-app/main/default/objects/ASL__AssureSign_Settings__c/fields/ASL__In_Person_Signing__c.field-meta.xml
<CustomField>
    <fullName>ASL__In_Person_Signing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Person Signing</label>
    <type>Checkbox</type>
</CustomField>